# IronForge-V2

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  Trunk.toml  fly.toml  index.html  iron-forge-9c490cfddd899ef.js  iron-forge-a76a98c6ae662810.js  iron-forge-af1960f3a3b0357c.js  iron-forge-cb8208d9c01345a9.js  manifest.json  package-lock.json  package.json  styles-c3dd05bc37a5165a.css  styles-f1a299d8cb6242ce.css  tailwind.config.js  ✅_FINAL_DOCUMENTATION_COMPLETION_2025-12-06.md  📄_ONE_PAGE_SUMMARY_2025-12-06.md  📋_ARCHITECTURE_INTEGRATION_SUMMARY.md  📋_ENTERPRISE_AUTH_ALIGNMENT_REPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
docs/: 00-PRODUCTION-CHECKLIST.md  DEVELOPER_DOCS.md  DOCUMENTATION_ORGANIZATION_REPORT.md  INDEX.md  README.md
docs/00-overview/: 01-project-vision.md  README.md
docs/01-architecture/: 01-system-architecture.md  02-data-separation-model.md  03-database-architecture.md  README.md
docs/02-technical-design/: 01-tech-stack.md  02-responsive-design.md  03-state-management.md  04-development-guide.md  06-modularization-best-practices.md  I18N_COMPLETION_REPORT.md  I18N_GUIDE.md  I18N_KEYS_REFERENCE.md  README.md
docs/03-api-design/: 01-ironcore-backend-api-reference.md  02-frontend-api-layer.md  03-error-handling.md  04-token-detection-service.md  05-backend-services-integration.md  06-frontend-api-quick-reference.md  PAYMENT_ANALYSIS.md  README.md
docs/04-security/: 01-key-management.md  02-encryption-strategy.md  03-security-architecture.md  05-production-encryption-guide.md  AUTH_401_DIAGNOSTIC_GUIDE.md  README.md
docs/05-ui-ux/: DESIGN_SYSTEM_V3.md  LOGO_DESIGN.md  LOGO_USAGE.md  README.md
docs/06-production/: 01-configuration-management.md  02-error-handling-system.md  03-logging-system.md  04-monitoring-setup.md  05-deployment-guide.md  README.md
docs/07-testing/: 01-testing-strategy.md  README.md
docs/08-development/: COMPONENTS_USAGE.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_CHECKLIST.md  NEXT_STEPS.md  PAGES_STATUS.md  README.md  REFACTOR_PLAN.md  ROUTER_STATUS.md
docs/09-archive/: README.md
docs/architecture/: README.md
docs/deprecated/: README.md
docs/features/: README.md
docs/guides/: README.md
docs/latest-updates/: DEEP_DOCUMENTATION_OPTIMIZATION_REPORT.md  FINAL_DOCUMENTATION_STATUS_DEC_2025.md  README.md
public/: styles.css  tailwind.css
scripts/: README.md
scripts/batch/: fix-build-admin.bat  fix-build.bat  fix-trunk-path.bat  fix-warnings.sh  清理缓存.bat
src/: lib.rs  main.rs  router.rs
src/blockchain/: bitcoin.rs  ethereum.rs  mod.rs  registry.rs  rpc.rs  solana.rs  ton.rs  traits.rs
src/components/: error_boundary.rs  lock_screen.rs  logo.rs  mod.rs  navbar.rs  route_guard.rs  wallet_recover_modal.rs  wallet_unlock_modal.rs
src/crypto/: bip39.rs  encryption.rs  key_manager.rs  keystore.rs  mod.rs  tx_signer.rs
src/features/: mod.rs
src/i18n/: mod.rs  translations.rs
src/pages/: bridge.rs  buy.rs  dashboard.rs  dashboard_balance.rs  dashboard_transactions.rs  import_wallet.rs  landing.rs  login.rs  mnemonic_backup.rs  mnemonic_verify.rs  mod.rs  not_found.rs  orders.rs  receive.rs  register.rs  sell.rs  send.rs  send_new.rs  (+6 more)
tests/: README.md  TEST_FILE_UPGRADE_COMPLETE.md  address_validation_test.rs  cache_test.rs  error_handling_test.rs  fee_speed_tier_logic_tests.rs  swap_validation_test.rs  tx_signer_verification_tests.rs
(+127 files in other folders)
